@startuml models

' 定义枚举类型
enum StateType {
  New
  Learning
  Review
  Relearning
}

enum RatingType {
  Again
  Hard
  Good
  Easy
}

' 定义类
interface  Rating {
  + Again: RatingType = 1
  + Hard: RatingType
  + Good: RatingType
  + Easy: RatingType
}

interface State {
  + New: StateType = 0
  + Learning: StateType
  + Review: StateType
  + Relearning: StateType
}

interface ReviewLog {
  + rating: Rating
  + state: State
  + elapsed_days: number
  + scheduled_days: number
  + review: Date
}

interface RecordLog {
  + Again: { card: Card, log: ReviewLog }
  + Hard: { card: Card, log: ReviewLog }
  + Good: { card: Card, log: ReviewLog }
  + Easy: { card: Card, log: ReviewLog }
}

interface Card {
  + due: Date
  + stability: number
  + difficulty: number
  + elapsed_days: number
  + scheduled_days: number
  + reps: number
  + lapses: number
  + state: State
  + last_review?: Date
}

interface CardInput {
  + due: Date
  + stability: number
  + difficulty: number
  + elapsed_days: number
  + scheduled_days: number
  + reps: number
  + lapses: number
  + state: StateType | State
  + last_review?: Date
}

interface DateInput {
  + value: Date | number | string
}

interface FSRSParameters {
  + request_retention: number
  + maximum_interval: number
  + w: number[]
  + enable_fuzz: boolean
}

' 关联关系
State -- StateType
Rating -- RatingType
Card <|-- CardInput
RecordLog --> ReviewLog
RecordLog --> Card
ReviewLog --> Rating
ReviewLog --> State
DateInput --|> Date

@enduml
